--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,13 +33,13 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:gravity="center"
-        android:text="断网模拟网络异常情况，网络错误" />
+        android:text="暂无数据" />
 
     <TextView
         android:id="@+id/tv5"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:gravity="center"
-        android:text="网络异常" />
+        android:text="断网模拟网络异常情况，网络错误" />
 
 </LinearLayout>
