--- a/app/src/main/res/layout/view_page_loading.xml
+++ b/app/src/main/res/layout/view_page_loading.xml
@@ -9,15 +9,14 @@
     <com.madreain.hulk.view.avloading.AVLoadingIndicatorView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:indicatorColor="@color/colorAccent"
-        />
+        app:indicatorColor="@color/colorPrimary" />
 
     <TextView
         android:id="@+id/tv_msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/loading"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimary"
         android:textSize="@dimen/sp18"
         android:visibility="gone" />
 </LinearLayout>
