--- a/app/src/main/res/layout/fragment_hulk.xml
+++ b/app/src/main/res/layout/fragment_hulk.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:id="@+id/fragment_hulk"
     android:orientation="vertical"
-    tools:context=".module.Main.MainActivity">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/tv1"
@@ -55,5 +55,4 @@
         android:layout_height="60dp"
         android:gravity="center"
         android:text="自定义刷新加载" />
-
 </LinearLayout>
