--- a/hulk/src/main/res/layout/toolbar.xml
+++ b/hulk/src/main/res/layout/toolbar.xml
@@ -13,7 +13,7 @@
             app:theme="@style/ToolbarTheme">
 
             <TextView
-                android:id="@+id/textView_left"
+                android:id="@+id/tv_left"
                 style="@style/BaseViewStyleBigAlpha"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -29,7 +29,7 @@
                 android:visibility="visible" />
 
             <TextView
-                android:id="@+id/textView_title"
+                android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -41,7 +41,7 @@
                 android:textSize="@dimen/sp16" />
 
             <TextView
-                android:id="@+id/textView_right"
+                android:id="@+id/tv_right"
                 style="@style/BaseViewStyleBig"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -57,6 +57,7 @@
 
         </android.support.v7.widget.Toolbar>
 
+        <!--阴影-->
         <View
             android:id="@+id/toolbarShadow"
             android:layout_width="match_parent"
