--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,21 +6,9 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-
-        <!--<item name="android:windowBackground">@color/windowBackground</item>-->
-        <!--<item name="colorControlNormal">@color/windowBackground</item>-->
-        <!--<item name="colorControlActivated">@color/colorAccent</item>-->
-
-        <item name="android:divider">@drawable/ic_list_divider</item>
-        <item name="android:dividerHeight">@dimen/division_line</item>
-        <item name="android:listDivider">@drawable/ic_list_divider</item>
-    </style>
-
-    <style name="AppTheme.Toolbar" parent="Widget.AppCompat.ActionBar">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">?attr/actionBarSize</item>
-        <item name="android:background">?attr/colorPrimary</item>
-        <item name="android:theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
+        <item name="android:windowBackground">@color/windowBackground</item>
+        <item name="colorControlNormal">@color/windowBackground</item>
+        <item name="colorControlActivated">@color/colorAccent</item>
     </style>
 
 </resources>
