--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <dimen name="dp270">270dp</dimen>
+    <dimen name="dp16">16dp</dimen>
+    <dimen name="dp1">1dp</dimen>
+    <dimen name="dp48">48dp</dimen>
+    <dimen name="dp24">24dp</dimen>
 </resources>
