--- a/app/src/main/res/layout/fragment_hulk.xml
+++ b/app/src/main/res/layout/fragment_hulk.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_hulk"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv1"
@@ -55,4 +55,11 @@
         android:layout_height="60dp"
         android:gravity="center"
         android:text="自定义刷新加载" />
+
+    <TextView
+        android:id="@+id/tv8"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:gravity="center"
+        android:text="DialogFragment" />
 </LinearLayout>
