--- a/app/src/main/res/layout/view_page_error.xml
+++ b/app/src/main/res/layout/view_page_error.xml
@@ -31,13 +31,15 @@
         android:textColor="@color/mA2A2A2"
         android:textSize="@dimen/sp14" />
 
-    <com.madreain.hulk.view.HulkStatusButton
+    <Button
         android:id="@+id/pager_error_loadingAgain"
         android:layout_width="@dimen/dp136"
         android:layout_height="@dimen/dp36"
         android:layout_marginTop="@dimen/dp40"
         android:layout_marginBottom="@dimen/dp20"
         android:text="@string/refresh"
-        app:sbColorStyle="grayGreenLight" />
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/sp14"
+        android:background="@drawable/shape_status" />
 
 </LinearLayout>
