--- a/hulk/src/main/res/values/colors.xml
+++ b/hulk/src/main/res/values/colors.xml
@@ -13,5 +13,5 @@
     <color name="m888888">#888888</color>
     <color name="mC8EBCA">#C8EBCA</color>
     <color name="m90EE90">#90ee90</color>
-    <color name="mFE5002">#F25C55</color>
+    <color name="mFE5002">#FE5002</color>
 </resources>
