--- a/hulk/src/main/res/layout/toolbar.xml
+++ b/hulk/src/main/res/layout/toolbar.xml
@@ -7,7 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <android.support.v7.widget.Toolbar
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             style="@style/Toolbar"
             app:theme="@style/ToolbarTheme">
@@ -55,7 +55,7 @@
                 android:textSize="@dimen/sp14"
                 android:visibility="gone" />
 
-        </android.support.v7.widget.Toolbar>
+        </androidx.appcompat.widget.Toolbar>
 
         <!--阴影-->
         <View
