--- a/app/src/main/res/layout/activity_custom_refresh.xml
+++ b/app/src/main/res/layout/activity_custom_refresh.xml
@@ -12,9 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+        
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 </LinearLayout>
